# sermon2jekyllmd

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
src/sermon2jekyllmd/: cli.py
src/sermon2jekyllmd/utility/: common.py  logger.py  md_gen.py  parser.py  replacer.py
